Fix text alignment in score header

--- a/app/styles/st-score.scss
+++ b/app/styles/st-score.scss
@@ -1,10 +1,22 @@
 .st-score {
   background: white;
+  font-size: 1.5rem;
 }
 
 .st-score__header {
   padding: 1em;
   cursor: pointer;
+  display: flex;
+  flex-direction: row;
+}
+
+.st-score__header-name {
+  flex: 1
+}
+
+.st-score__header-duration {
+  text-align: right;
+  width: 10em;
 }
 
 .st-score__body {
